--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -1,31 +1,36 @@
 <html>
-	<head>
-		<link href="/css/bootstrap.min.css" rel="stylesheet">
-		<link href="/css/styles.css" rel="stylesheet">
-	</head>
 
-	<body>
-		<h1>
+<head>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
+</head>
+
+<body>
+    <h1>
 			Welcome to <%=title%>
 		</h1>
-		<div class="grid-container" id="messages">
-			<%msgs.forEach(function(m){%>
-				<div>
-					<%=m.msg%>
-					<!-- from user <%=m.username%>	 -->	
-				</div>
-			<%})%>
-		</div>
-		<div>	
-			<form id="form">
-				<input id="m" class="text-post" type="text-area" name="msg" placeholder="Type your message here.." size="100"><br>
-				<button class="button-post" type="submit">POST</button>
-			</form>
-		</div>
-		<script src="/js/jquery.min.js"></script>
-		<script src="/js/bootstrap.min.js"></script>
-		<script src="/socket.io/socket.io.js"></script>
-		<script src="/js/chat.js"></script>
-		
-	</body>
+    <div class="grid-container" id="messages">
+        <%msgs.forEach(function(m){%>
+        <div>
+            <%=m.msg%>
+            from user
+            <%=m.username%>
+        </div>
+        <%})%>
+    </div>
+    <div>
+        <form id="form">
+            <input id="m" class="text-post" type="text-area" name="msg" placeholder="Type your message here.." size="100"><br>
+            <button class="button-post" type="submit">POST</button><br>
+        </form>
+        <form id="logout-form" action="/user/logout">
+            <input type="submit" value="Logout">
+        </form>
+    </div>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
+</body>
+
 </html>
