bootstrap classes for styling login, signup pages

--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,29 +1,44 @@
 <html>
 
 <head>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/styles.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="/css/bootstrap.min.css" rel="stylesheet"> -->
+    <!-- <link href="/css/styles.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 </head>
 
 <body>
-    <h1>
-		Welcome to <%=title%>
-	</h1>
-    <div class="signup-container">
-        
-        <form action="/user/signup" method="post">
-            <label for="username">User Name: </label>
-            <input type="text" name="username" id="username"><br>
-            <label for="password">Password: </label>
-            <input type="text" name="password" id="password"><br>
-            <button type="submit" id="signup">Signup</button><br>
-            If you are registered
-            <a href="/user/login">Login here!</a>
-        </form>
+    <div id="loginModal" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="text-center"><%=title%></h1>
+                </div>
+                <div class="modal-body">
+                    <form class="form col-md-12 center-block" action="/user/signup" method="post">
+                        <div class="form-group">
+                            <input name="username" id="username" type="text" class="form-control input-lg" placeholder="Username">
+                        </div>
+                        <div class="form-group">
+                            <input name="password" id="password" type="password" class="form-control input-lg" placeholder="Password">
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary btn-lg btn-block">Signup</button>
+                            
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <div class="col-md-12">
+                        If you are already registered
+                        <a href="/user/login">Login here!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
