--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -33,6 +33,9 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
+    <script>
+    	$("#messages").scrollTop($("#messages")[0].scrollHeight);
+    </script>
 </body>
 
 </html>
