--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,41 +4,138 @@ h1{
   text-align:center;
 }
 
-button{
-  text-align:center;
+
+body{
+    height: 400px;
+    /*position: fixed;*/
+    bottom: 0;
 }
 
-.div1{
-  background-color : blue;
+.panel{
+    margin-bottom: 0px;
+}
+.chat-window{
+    bottom:0;
+    position:fixed;
+    float:right;
+    margin-left:10px;
+}
+.chat-window > div > .panel{
+    border-radius: 5px 5px 0 0;
 }
 
-.grid-container{
-	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: 70px 70px;
-	grid-gap: 20px;
-	padding: 20px;
-	height: 400px;
-	background-color: #2196F3;
-	overflow: scroll;
-
+.msg_container_base{
+  background: #e5e5e5;
+  margin: 0;
+  padding: 0 10px 10px;
+  max-height: 100%;
+  overflow-x:hidden;
+}
+.top-bar {
+  background: #666;
+  color: white;
+  padding: 10px;
+  position: relative;
+  overflow: hidden;
+}
+.msg_receive{
+    padding-left:0;
+    margin-left:0;
+}
+.msg_sent{
+    padding-bottom:20px !important;
+    margin-right:0;
+}
+.messages {
+  background: white;
+  padding: 10px;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  max-width:100%;
+}
+.messages > p {
+    font-size: 15px;
+    margin: 0 0 0.2rem 0;
+  }
+.messages > time {
+    font-size: 12px;
+    color: #ccc;
+}
+.msg_container {
+    padding: 10px;
+    overflow: hidden;
+    display: flex;
 }
 
-.grid-container > div{
-	background-color: rgba(255, 255, 255, 0.8);
-	text-align: left;
-	padding: 20px 20px;
-  	font-size: 30px;
+.base_sent {
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
-.text-post{
-	padding-top: 50px;
-	padding-bottom: 50px;
+.msg_sent > time{
+    float: right;
 }
 
-.button-post{
-	text-align: center;
-	padding: 20px 20px;
-	background-color: seagreen;
+.msg_container_base::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+    overflow-y: scroll;
 }
 
+.msg_container_base::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+    overflow-y: scroll;
+}
+
+.msg_container_base::-webkit-scrollbar-thumb
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+    overflow-y: scroll;
+}
+
+.btn-group.dropup{
+    position:fixed;
+    left:0px;
+    bottom:0;
+}   
+
+/*---*CHAT*-----*/
+#chat .panel-heading{
+    /*background-image: url(http://www.caixa.gov.br/Style%20Library/images/bg_destaqueInternas.jpg);*/
+    background-position: center 30%;
+    background: #2F4F4F
+}
+#chat .panel-heading, #chat .panel-heading a {
+    color:#fff ;
+}
+#chat .messages{
+    box-shadow:none;
+    background: #f3f5f9;
+}
+#chat .base_sent .messages{
+    background: #2F4F4F;
+    border-radius: 8px 8px 0px 8px;
+    -webkit-border-radius: 8px 8px 0px 8px;
+    color: #fff;
+    border-bottom:1px solid #108BB4;
+}
+#chat .base_receive .messages{
+    background: #2F4F4F;
+    border-radius: 0 8px 8px 8px;
+    border-bottom:1px solid #ccc;
+    color: #fff;
+    
+}
+
+#chat .msg_container_base{
+    background:#F5F5DC;
+}
+#chat time{ color:#fff; font-style: italic; }
+
+#chat_window_1{
+	margin-left:100px;
+}
